kubernetes/Object-Storage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rex-store-external
  namespace: rook-ceph
  labels:
    app: rook-ceph-rgw
    rook_cluster: rook-ceph
    rook_object_store: rex-store
spec:
  ports:
  - name: rgw
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: rook-ceph-rgw
    rook_cluster: rook-ceph
    rook_object_store: rex-store
  sessionAffinity: None
  type: NodePort
